--- a/tdlib-rs/Cargo.toml
+++ b/tdlib-rs/Cargo.toml
@@ -17,12 +17,9 @@ readme = "README.md"
 [package.metadata.docs.rs]
 features = ["docs", "bots-only-api"]
 
-[package.metadata.system-deps]
-tdjson = "1.8.29"
-
 [features]
 # The default feature build the library using the local tdlib library
-default = []
+default = ["local-tdlib"]
 # This feature is used to enable the functions only available to the Telegram bots
 bots-only-api = []
 # This feature is used to build the documentation preventing linking to the tdjson library
@@ -37,21 +34,23 @@ download-tdlib = ["dep:reqwest", "dep:zip"]
 [dependencies]
 log = "0.4"
 futures-channel = "0.3"
-once_cell = "1.18"
+once_cell = "1.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_with = "3.2"
+serde_with = "3.11"
 system-deps = { version = "7", optional = true }
-reqwest = { version = "0.12.4", features = ["blocking"], optional = true }
-zip = { version = "2.0.0", optional = true }
+reqwest = { version = "0.12.9", features = ["blocking"], optional = true }
+zip = { version = "2.2.1", optional = true }
 dirs = "5.0.1"
+build-target = "0.4.0"
 
 [build-dependencies]
 tdlib-rs-gen = { path = "../tdlib-rs-gen", version = "1.0.5" }
 tdlib-rs-parser = { path = "../tdlib-rs-parser", version = "1.0.5" }
 system-deps = { version = "7", optional = true }
-reqwest = { version = "0.12.4", features = ["blocking"], optional = true }
-zip = { version = "2.0.0", optional = true }
+reqwest = { version = "0.12.9", features = ["blocking"], optional = true }
+zip = { version = "2.2.1", optional = true }
+build-target = "0.4.0"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
